--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -27,6 +27,7 @@ jobs:
           - x64
     steps:
       - uses: actions/checkout@v2
+      - uses: quarto-dev/quarto-actions/setup@v2
       - uses: julia-actions/setup-julia@v1
         with:
           version: ${{ matrix.version }}
