--- a/Project.toml
+++ b/Project.toml
@@ -10,6 +10,7 @@ JSONTables = "b9914132-a727-11e9-1322-f18e41205b0b"
 Tables = "bd369af6-aec1-5ad0-b16a-f7cc5008161c"
 
 [compat]
+JSON3 = "1"
 julia = "1"
 
 [extras]
